jvm 添加